broke out sub components

--- a/client/app.scss
+++ b/client/app.scss
@@ -11,3 +11,16 @@ html, body {
 .test {
   border:1px solid black;
 }
+
+.btn-group {
+
+}
+
+.card-options {
+  position:absolute;
+  top:0;
+  right:0;
+  background:#eaeaea;
+  width:20px;
+  height:20px;
+}
